force-app/main/default/objects/OrderSummary/fields/Amount_Refunded__c.field-meta.xml
<CustomField>
    <fullName>Amount_Refunded__c</fullName>
    <description>Sums up refunds from child order payment summaries</description>
    <label>Amount Refunded</label>
    <summarizedField>OrderPaymentSummary.RefundedAmount</summarizedField>
    <summaryFilterItems>
        <field>OrderPaymentSummary.RefundedAmount</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </summaryFilterItems>
    <summaryForeignKey>OrderPaymentSummary.OrderSummaryId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>