force-app/main/default/objects/OrderSummary/fields/Amount_Retained__c.field-meta.xml
<CustomField>
    <fullName>Amount_Retained__c</fullName>
    <description>Shows the funds retained for orders where a refund occurred.</description>
    <formula>Amount_Captured__c - Amount_Refunded__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount Retained</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>