force-app/main/default/objects/OrderSummary/fields/avaoms__Avatax_Message__c.field-meta.xml
<CustomField>
    <fullName>avaoms__Avatax_Message__c</fullName>
    <description>Store Avatax Message</description>
    <label>Avatax Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>