force-app/main/default/objects/OrderSummary/fields/BillingAddressLine2__c.field-meta.xml
<CustomField>
    <fullName>BillingAddressLine2__c</fullName>
    <label>Billing Address Line 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>