force-app/main/default/objects/OrderSummary/fields/Cancellation_Prior_To_Fulfillment__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Prior_To_Fulfillment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cancellation Prior To Fulfillment?</label>
    <type>Checkbox</type>
</CustomField>