force-app/main/default/objects/OrderSummary/fields/Cancellation_Refund__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Refund__c</fullName>
    <label>Cancellation Refund</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>