force-app/main/default/objects/OrderSummary/fields/Client_Id__c.field-meta.xml
<CustomField>
    <fullName>Client_Id__c</fullName>
    <defaultValue>TEXT(97554902)</defaultValue>
    <label>Client Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>