force-app/main/default/objects/OrderSummary/fields/CustomerDOB__c.field-meta.xml
<CustomField>
    <fullName>CustomerDOB__c</fullName>
    <label>CustomerDOB</label>
    <length>255</length>
    <type>Text</type>
</CustomField>