force-app/main/default/objects/OrderSummary/fields/CustomerId__c.field-meta.xml
<CustomField>
    <fullName>CustomerId__c</fullName>
    <label>Customer Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>