force-app/main/default/objects/OrderSummary/fields/Date_Cancelled__c.field-meta.xml
<CustomField>
    <fullName>Date_Cancelled__c</fullName>
    <label>Date Cancelled</label>
    <type>DateTime</type>
</CustomField>