force-app/main/default/objects/OrderSummary/fields/Date_Fulfilled__c.field-meta.xml
<CustomField>
    <fullName>Date_Fulfilled__c</fullName>
    <label>Date Fulfilled</label>
    <type>DateTime</type>
</CustomField>