force-app/main/default/objects/OrderSummary/fields/ecomCustomerId__c.field-meta.xml
<CustomField>
    <fullName>ecomCustomerId__c</fullName>
    <label>ECOM Customer ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>