force-app/main/default/objects/OrderSummary/fields/Eligible_for_FO_Creation__c.field-meta.xml
<CustomField>
    <fullName>Eligible_for_FO_Creation__c</fullName>
    <formula>AND(
    ISPICKVAL(Status, &apos;Pending&apos;), 
     NOW() &gt; (OrderedDate + (30/1440))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Eligible for FO Creation?</label>
    <type>Checkbox</type>
</CustomField>