force-app/main/default/objects/OrderSummary/fields/Is_Manual_Reprocess__c.field-meta.xml
<CustomField>
    <fullName>Is_Manual_Reprocess__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Manual Reprocess</label>
    <type>Checkbox</type>
</CustomField>