force-app/main/default/objects/OrderSummary/fields/Is_Order_Registered__c.field-meta.xml
<CustomField>
    <fullName>Is_Order_Registered__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Order Registered</label>
    <type>Checkbox</type>
</CustomField>