force-app/main/default/objects/OrderSummary/fields/IsPriceOptimized__c.field-meta.xml
<CustomField>
    <fullName>IsPriceOptimized__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Price Adjustment Flag</label>
    <type>Checkbox</type>
</CustomField>