force-app/main/default/objects/OrderSummary/fields/isTaxEstimated__c.field-meta.xml
<CustomField>
    <fullName>isTaxEstimated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tax Recalculation Required</label>
    <type>Checkbox</type>
</CustomField>