force-app/main/default/objects/OrderSummary/fields/LC_status__c.field-meta.xml
<CustomField>
    <fullName>LC_status__c</fullName>
    <formula>LOWER(TEXT(Status))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LC_status</label>
    <type>Text</type>
</CustomField>