force-app/main/default/objects/OrderSummary/fields/Mark_Final_Capture__c.field-meta.xml
<CustomField>
    <fullName>Mark_Final_Capture__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mark Final Capture?</label>
    <type>Checkbox</type>
</CustomField>