force-app/main/default/objects/OrderSummary/fields/Minor_Order__c.field-meta.xml
<CustomField>
    <fullName>Minor_Order__c</fullName>
    <formula>OriginalOrder.Minor_Order__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Minor Order</label>
    <type>Checkbox</type>
</CustomField>