force-app/main/default/objects/OrderSummary/fields/Order_Summary_Id__c.field-meta.xml
<CustomField>
    <fullName>Order_Summary_Id__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Summary Id (18 Dig)</label>
    <type>Text</type>
</CustomField>