force-app/main/default/objects/OrderSummary/fields/Partner_Name__c.field-meta.xml
<CustomField>
    <fullName>Partner_Name__c</fullName>
    <label>Partner Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>