force-app/main/default/objects/OrderSummary/fields/PreferredGender__c.field-meta.xml
<CustomField>
    <fullName>PreferredGender__c</fullName>
    <label>PreferredGender</label>
    <length>255</length>
    <type>Text</type>
</CustomField>