force-app/main/default/objects/OrderSummary/fields/PWN_Service_Fee__c.field-meta.xml
<CustomField>
    <fullName>PWN_Service_Fee__c</fullName>
    <label>PWN Service Fee</label>
    <summarizedField>OrderItemSummary.TotalLineAmount</summarizedField>
    <summaryFilterItems>
        <field>OrderItemSummary.TestType__c</field>
        <operation>equals</operation>
        <value>PA</value>
    </summaryFilterItems>
    <summaryForeignKey>OrderItemSummary.OrderSummaryId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>