force-app/main/default/objects/OrderSummary/fields/RefundTotal__c.field-meta.xml
<CustomField>
    <fullName>RefundTotal__c</fullName>
    <description>TotalAdjustedProductAmount+ TotalProductAdjDistAmount+ TotalAdjustedDeliveryAmount + TotalTaxAmount- Service_Fee__c
IF( OR(TEXT(Status)==&apos;Cancelled&apos;, TEXT(Status)==&apos;Expired&apos;) ,
OriginalOrder.TotalAdjustedProductAmount+ OriginalOrder.TotalProductAdjDistAmount+ OriginalOrder.TotalAdjustedDeliveryAmount + OriginalOrder.TotalTaxAmount- Service_Fee__c, 0)</description>
    <formula>IF(OR(TEXT(Status)==&apos;Cancelled&apos;, TEXT(Status)==&apos;Expired&apos;),
   IF(Cancellation_Refund__c&gt;0,Cancellation_Refund__c,OriginalOrder.TotalAdjustedProductAmount+ OriginalOrder.TotalProductAdjDistAmount+ OriginalOrder.TotalAdjustedDeliveryAmount + OriginalOrder.TotalTaxAmount)
,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Refund</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>