force-app/main/default/objects/OrderSummary/fields/Registration_URL__c.field-meta.xml
<CustomField>
    <fullName>Registration_URL__c</fullName>
    <label>Registration URL</label>
    <type>Url</type>
</CustomField>