force-app/main/default/objects/OrderSummary/fields/Tax_Recalc_Count__c.field-meta.xml
<CustomField>
    <fullName>Tax_Recalc_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Tax Recalc Count</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>