force-app/main/default/objects/OrderSummary/fields/TNP_Appease__c.field-meta.xml
<CustomField>
    <fullName>TNP_Appease__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used for an NCS + finance appeasement report. Will be manually populated via a data import.</description>
    <label>TNP_Appease</label>
    <type>Checkbox</type>
</CustomField>