force-app/main/default/objects/OrderSummary/fields/utmData__c.field-meta.xml
<CustomField>
    <fullName>utmData__c</fullName>
    <label>UTM Data</label>
    <length>13000</length>
    <type>LongTextArea</type>
</CustomField>