force-app/main/default/objects/OrderSummary/listViews/all_order_summaries.listView-meta.xml
<ListView>
    <fullName>all_order_summaries</fullName>
    <columns>Name</columns>
    <columns>Account</columns>
    <columns>Id</columns>
    <columns>Status</columns>
    <columns>isTaxEstimated__c</columns>
    <columns>TotalAdjDistAmount</columns>
    <columns>TotalTaxAmount</columns>
    <columns>GrandTotalAmount</columns>
    <columns>RefundTotal__c</columns>
    <columns>CreatedDate</columns>
    <columns>LastModifiedDate</columns>
    <filterScope>Everything</filterScope>
    <label>All Order Summaries</label>
</ListView>