force-app/main/default/objects/OrderSummary/listViews/All_Order_Summaries_Status_Pending.listView-meta.xml
<ListView>
    <fullName>All_Order_Summaries_Status_Pending</fullName>
    <columns>Name</columns>
    <columns>Account</columns>
    <columns>Status</columns>
    <columns>OrderedDate</columns>
    <columns>TotalAdjDistAmount</columns>
    <columns>GrandTotalAmount</columns>
    <columns>CreatedDate</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status</field>
        <operation>equals</operation>
        <value>Pending</value>
    </filters>
    <label>Status - Pending</label>
</ListView>