force-app/main/default/objects/OrderSummary/listViews/Orders_With_Exceptions.listView-meta.xml
<ListView>
    <fullName>Orders_With_Exceptions</fullName>
    <columns>Name</columns>
    <columns>Account</columns>
    <columns>GrandTotalAmount</columns>
    <columns>OrderedDate</columns>
    <columns>Status</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ActiveProcessExceptionCount</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </filters>
    <label>Orders With Exceptions</label>
</ListView>