force-app/main/default/objects/OrderSummary/listViews/Status_Cancelled.listView-meta.xml
<ListView>
    <fullName>Status_Cancelled</fullName>
    <columns>Name</columns>
    <columns>Account</columns>
    <columns>Status</columns>
    <columns>OrderedDate</columns>
    <columns>TotalAdjDistAmount</columns>
    <columns>GrandTotalAmount</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status</field>
        <operation>equals</operation>
        <value>Cancelled</value>
    </filters>
    <label>Status - Cancelled</label>
</ListView>