force-app/main/default/objects/OrderSummary/listViews/Status_Created.listView-meta.xml
<ListView>
    <fullName>Status_Created</fullName>
    <columns>Name</columns>
    <columns>Account</columns>
    <columns>OrderedDate</columns>
    <columns>Status</columns>
    <columns>TotalAdjDistAmount</columns>
    <columns>TotalTaxAmount</columns>
    <columns>GrandTotalAmount</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status</field>
        <operation>equals</operation>
        <value>Created</value>
    </filters>
    <label>Status - Created</label>
</ListView>