force-app/main/default/objects/OrderSummary/listViews/Status_Results_Ready.listView-meta.xml
<ListView>
    <fullName>Status_Results_Ready</fullName>
    <columns>Name</columns>
    <columns>Account</columns>
    <columns>OrderedDate</columns>
    <columns>Status</columns>
    <columns>TotalAdjDistAmount</columns>
    <columns>TotalTaxAmount</columns>
    <columns>GrandTotalAmount</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status</field>
        <operation>equals</operation>
        <value>Order Complete</value>
    </filters>
    <label>Status - Order Complete</label>
</ListView>